--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,6 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=Wiki Sidebar
+author=YourName
+support=https://github.com/YourGitHub/wiki-sidebar
+description=Displays OSRS Wiki pages directly inside RuneLite using the built-in Wiki plugin.
+tags=wiki,sidebar,osrs
+plugins=com.example.wikisidebar.WikiSidebarPlugin
