--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,7 @@
 displayName=Wiki Sidebar
-author=YourName
+author=House
 support=https://github.com/YourGitHub/wiki-sidebar
-description=Displays OSRS Wiki pages directly inside RuneLite using the built-in Wiki plugin.
+description=Displays OSRS Wiki pages directly inside the RuneLite Side Panel using the built-in Wiki plugin.
 tags=wiki,sidebar,osrs
 plugins=com.example.wikisidebar.WikiSidebarPlugin
+
